Solve spacing issue in system status area
Shell implemented indicators got padding from default button style,
and also spacing from their container, so too much space was left
between them. This only became apparent when more than one was
implemented, though.

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -235,10 +235,6 @@ StTooltip {
     spacing: 4px;
 }
 
-#statusTray {
-    spacing: 14px;
-}
-
 #legacyTray {
     spacing: 14px;
     padding-left: 14px;
